--- a/mall-search/src/main/resources/templates/list.html
+++ b/mall-search/src/main/resources/templates/list.html
@@ -399,7 +399,7 @@
 <!--搜索导航-->
 <div class="header_sous">
     <div class="logo">
-        <a href="/static/search/#"><img src="/static/search/./image/logo1.jpg" alt=""></a>
+        <a href="http://mymall.com"><img src="/static/search/./image/logo1.jpg" alt=""></a>
     </div>
     <div class="header_form">
         <input type="text" placeholder="手机" />
